// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package messages;

// BlobWithSHA1 is a wrapper around a binary blob with SHA1 hash to verify
// its integrity.
message BlobWithSHA1 {
  bytes blob = 1;
  bytes sha1 = 2;
}

// TagCache stores a mapping (package name, tag) -> instance ID to speed up
// subsequence ResolveVersion calls when tags are used.
message TagCache {
  message Entry {
    string package = 1;
    string tag = 2;
    string instance_id = 3;
  }

  // Capped list of entries, most recently resolved is last.
  repeated Entry entries = 1;
}
